Link to new repo location

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: JUnit
 email: team@junit.org
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://junit.org" # the base hostname & protocol for your site
-current_repo_url: https://github.com/junit-team/junit5
+current_repo_url: https://github.com/junit-team/junit-framework
 
 # Build settings
 markdown: kramdown
